web/assets/css/haphpy.css
/** General **/
.haphpy-icon-github:before {
    content: "\f09b";
}

.haphpy-icon-facebook:before {
    content: "\f082";
}

.haphpy-icon-twitter:before {
    content: "\f099";
}

.text-highlight {
    color: #f34141;
}

.text-highlight a {
    color: #f34141;
}

.fitting-media {
    width: 100%;
}

video {
    width: 100%;
}

a.differ {
    color: #333;
}

a.differ:hover {
    color: #f34141;
}

a.stand-out {
    color: #000;
}

a.stand-out:hover {
    color: #f34141;
}

.arobase:before {
    content: "@";
}

/** Menu **/
#login-state span.fa {
    margin-right: 0.4em;
}

.translation-bridge-switcher ul.dropdown-menu {
    min-width: 0;
}

.translation-bridge-switcher a.dropdown-toggle {
    text-transform: uppercase;
}

/** Header **/

header#header {
    padding: 80px 0 0 0;
    background:
        radial-gradient(circle, #f34141, rgba(243,65,65,0) 50%),
        linear-gradient(to bottom left, HotPink, rgba(255,122,90,0), DarkOrange),
        linear-gradient(to right, DarkSeaGreen, #f34141, DodgerBlue)
    ;
    background-color: #f34141;
    margin-bottom: 0;
}

header#header div {
    padding: 2%;
    max-width: 1140px;
    margin: 0 auto;
}

#haphpy-logo img {
    width: 100%;
    filter: drop-shadow( 2px 2px 1px rgba(0,0,0,0.3));
    -webfilter: drop-shadow( 2px 2px 1px rgba(0,0,0,0.3));
}

header#header #warning-message {
    position: relative;
    max-width: 1140px;
    margin: 0 auto;
    padding: 0;
}

header#header #warning-message div {
    line-height: 1em;
    -webkit-animation:progress-bar-stripes 2s linear infinite;
    animation:progress-bar-stripes 2s linear infinite;
    padding: 0.2em;
    text-transform: none;
}

@media screen and (min-width: 361px) {
    header#header #warning-message div {
        position: absolute;
        display: inline-block;
        line-height: 1em;
        top: 0.8em;
        left: 6em;
        border-radius: 0.1em;
        padding: 0.2em;
        text-transform: none;
        transform: rotate(-7deg);
        box-shadow: 0 10px 15px 6px rgba(0,0,0,0.3);
    }
}

/** Gauge **/
#gauge-section h1 {
    color: #000000;
    font-weight: 100;
    font-size: 30px;
    margin-bottom: 2em;
    text-transform: none;
    text-align: center;
}

@media screen and (max-width: 767px) {
    header h1 {
        margin: 1em 0;
    }
}

header h1 sup {
    text-transform: none;
}

#gauge-section {
    padding-top: 2em;
}

#gauge {
    position: relative;
    padding-top: 8px;
    margin-bottom: 3em;
}

#gauge .progress {
    border-radius: 4px;
}

#gauge .progress-bar {
    border-radius: 0 4px 4px 0;
}

.gauge-step {
    position: absolute;
    top: 0;
    line-height: 24px;
    margin-left: -12px;
}

.gauge-step:last-child {
    margin-left: -16px;
}

.gauge-step-dot {
    display: inline-block;
    width: 24px;
    height: 24px;
    border-radius: 12px;
    border-color: #ddd;
    border-style: solid;
    border-width: 8px;
}

.gauge-step-name {
    display: inline;
    position: absolute;
    right: 0;
    top: -24px;
}

#gauge-contributors, #gauge-remaining-days {
    color: #000000;
    text-align: center;
}

#gauge-contributors span, #gauge-remaining-days span {
    font-size: 200%;
}

/** Main content **/
section.page-section {
    padding-top: 2em;
    padding-bottom: 2em;
    background: center center no-repeat;
    background-size: cover;
}

section.dark-background {
    color: #ccc;
}

section.dark-background h2,
section.dark-background h4 {
    color: #ffffff;
}

section a.differ {
    color: #ffffff;
}

section a.differ:hover {
    color: #f34141;
}

section h2 {
    font-weight: 100;
}

/** Home Page */
#introduction {
    background-image: url(../images/galaxy.png);
    color: #ddd;
    font-size: 150%;
    text-align: center;
}

#introduction p {
    margin: 2em 0;
    line-height: 1.5em;
}

.haphpy-step {
    position: relative;
}

.haphpy-step-number {
    width: 2em;
    height: 2em;
    border-radius: 50%;
    color: #ffffff;
    text-align: center;
    display: inline-block;
    margin-left: -0.5em;
}

@media screen and (max-width: 767px) {
    .haphpy-step-number {
        margin-left: 0;
    }
}

.haphpy-step h3 {
    line-height: 2em;
    text-transform: none;
}
.haphpy-step .btn {
    margin-bottom: 1em;
}

/** Authentication **/
a.auth-button span{
    width: 2em;
    height: 2em;
    border-radius: 50%;
    color: #ffffff;
    background: red;
    text-align: center;
    display: inline-block;
    line-height: 2em;
    font-size: 180%;
    margin-top: 2em;
}

/** Form **/
ul.error-list {
    padding: 0;
}

.haphpy-radio {
    font-weight: 400;
    display: table;
}

.haphpy-radio > div {
    display: table-row;
}

.haphpy-radio > div input, .haphpy-radio > div label {
    display: table-cell;
    vertical-align: middle;
    height: 100%;
}

.haphpy-radio input {
    cursor: pointer;
}

.haphpy-radio input:checked+label {
    color: #000000; /* black highlights better in elaostrap */
}

.haphpy-radio label {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    padding-left: 0.5em;
    font-weight: 400;
    cursor: pointer;
    margin: 0;
}

/** examples **/

#examples {
    color: #ddd;
    background-image: url(../images/code.jpg);
}

#examples h2 {
    color: #ffffff;
}

#examples h5 {
    color: #ddd;
}

.sixteen-nine {
    position: relative;
}
.sixteen-nine:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: 56.25%;
}
.sixteen-nine > .content {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    box-shadow: 0 3px 6px 2px rgba(0,0,0,0.3);
}

.sixteen-nine > .content-image {
    background-position: center center;
    background-size: cover;
}

.sixteen-nine > .content-video .fitting-media {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/** Contribution time is over **/
#contribution-over .container {
    text-align: center;
}

#contribution-over h2 {
    text-transform: none;
}

/** Submission success page **/
#video-success {
    position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    transform: translateX(-50%) translateY(-50%);
    background: url(../images/audienc.jpg) no-repeat;
    background-size: cover;
}

#video-hue {
    position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    transform: translateX(-50%) translateY(-50%);
    background:
        radial-gradient(circle, rgba(243,65,65,0.15), transparent 50%),
        linear-gradient(to bottom left, rgba(255,105,180,0.25), transparent, rgba(255,140,0,0.25)),
        linear-gradient(to right, rgba(30,144,255,0.25), rgba(243,65,65,0.15), rgba(143,188,143,0.25))
    ;
    background-size: cover;
}

#submission-success {
    margin-top: 2em;
    color: white;
}

#submission-success a.page-link {
    color: black;
    background-color: rgba(255,255,255,0.5);
    padding: 0.15em;
    transition: background-color 0.5s;
    border-radius: 2px;
    font-size: 90%;
}


#submission-success a.page-link:hover {
    background-color: rgba(255,255,255,1);
}

#submission-success .row:first-child {
    margin-bottom: 10%;
}

#submission-success h1 {
    color: #ffffff;
    text-align: center;
    font-weight: 100;
    border-top: 2px #ffffff solid;
    border-bottom: 2px #ffffff solid;
    line-height: 1.5em;
    padding-bottom: 1em;
    padding-top: 1em;
    margin-bottom: 5%;
}

#submission-success h1 + div.row {
    padding-top: 30px;
}


/** User Groups **/
#php-user-groups {
    background: #ffffff;
}

.user-group {
    display: flex;
    justify-content: space-between;
}

.user-group-image {
    width: 5em;
    height: 5em;
    position: relative;
}

.user-group-image img {
    max-height: 100%;
    max-width: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.user-group-data {
    width: calc(100% - 5em);
    padding: 0 0 0 1em;
}

.user-group-data h4 {
    line-height: 1.2;
    margin: -0.2em 0 0 0;
}

/** Contributions **/
#contributions {
    padding-top: 80px;
    background-image: url(../images/galaxy.png);
    color: #ddd;
}

#contributions h3 {
    color: #ffffff;
}

.contribution a {
    color: #ffffff;
}

.contribution a:hover {
    color: #f34141;
}
.contribution span {
    margin-right: 0.5em;
}

/** About Page **/
#final-video {
    background-image: url(../images/galaxy_core.png);
    padding-top: 80px;
}

#final-video h2 {
    text-align: center;
    text-transform: none;
    margin: 2em 0;
}

#about-contributions h2 {
    color: #f34141;
    text-align: center;
    text-transform: none;
    margin: 2em 0;
}

#about-misc {
    background-image: url(../images/galaxy.png);
}

/** License **/
#creative-commons-icons {
    text-align: center;
}

#creative-commons-icons svg {
    width: 80%;
}

.cc-icon {
    fill: #ddd;
}

/** Footer **/
footer#footer {
    margin-top: 0;
}

